--- a/src/css/border.less
+++ b/src/css/border.less
@@ -112,6 +112,7 @@
 .br-f3{._b_(#f3f3f3,right)}
 
 .ra-all{border-radius: 100%;}
+.ra-half{border-radius: 50%;}
 .ra-0{._bra_(0)}
  .ra-1{._bra_(1)}
  .ra-2{._bra_(2)}
